@startuml
skinparam classAttributeIconSize 0
title ListPetTreatmentsCommand Class Diagram

' =====================
' Classes
' =====================

interface Command {
    + exec(args : String) : void
}

class ListPetTreatmentsCommand {
    - LOGGER : Logger
    - pets : PetList
    + ListPetTreatmentsCommand(pets : PetList)
    + exec(args : String) : void
}

class PetList {
    + getPetByName(name : String) : Pet
    + size() : int
    + get(index : int) : Pet
}

class Pet {
    - name : String
    - treatments : ArrayList<Treatment>
    + getName() : String
    + getTreatments() : ArrayList<Treatment>
}

class Treatment {
    - type : String
    - date : LocalDate
    - note : String
    - isCompleted : boolean
    + getType() : String
    + getDate() : LocalDate
    + isCompleted() : boolean
    + toString() : String
}

' =====================
' Relationships
' =====================

ListPetTreatmentsCommand -|> Command
ListPetTreatmentsCommand --> PetList
PetList "1" -> "*" Pet : contains
Pet "1" --> "*" Treatment : has
@enduml